# cjlux-marimo_notebooks

./: .gitignore  README.md  pyproject.toml
Notebooks/: 1-simple.py  2-reactivity.py  3-interactive.py  4-interactive_plot.py  5-ML.py  6-ML _diskcache.py  delete.ipynb  delete.py  simple.ipynb
Notebooks/utils/: tools.py
Slides_v1.0/images/: .$AI-History.drawio.bkp  .$Diag-reproducibility.drawio.bkp  .$DomainsOfAI.drawio.bkp  .$Reproducibility-terms.drawio.bkp  .$TraineValidTest.drawio.bkp  .$tf-hyper-params.drawio.bkp  Diag-reproducibility.drawio  DomainsOfAI.drawio  NetworkTraining.dia  Reproducibility-terms.drawio  TrainValidTest.drawio  tf-hyper-params.drawio
