[project]
name = "14-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "numpy==2.1",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "py-cpuinfo>=9.0.0",
    "pydot>=4.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
